// Copyright (c) 2023 RTX BBN Technologies Corp.

plugins {
	id 'java-library'
	id 'maven-publish'
}

version = parliamentVersion

dependencies {
	implementation libs.berkeleyDbJe
	implementation libs.commonsDbcp
	implementation libs.geotoolsEpsgExt
	implementation libs.geotoolsEpsgHsql
	implementation libs.geotoolsEpsgWkt
	implementation libs.geotoolsReferencing
	implementation libs.geotoolsXsdCore
	implementation libs.geotoolsXsdGml
	implementation libs.geotoolsXsdKml
	implementation libs.jenaArq
	implementation libs.jts
	implementation libs.postgresql
	implementation libs.slf4jApi
	implementation project(':jena:ParliamentClient')
	implementation project(':jena:KbGraph')
	implementation fileTree(dir: "${depDir}/deegree", include: "*.jar")
	implementation fileTree(dir: "${depDir}/openmap", include: "*.jar")
	testImplementation libs.logback
	testImplementation(testFixtures(project(":jena:KbGraph")))
}

configurations.all {
	exclude group: 'xml-apis'
}

java {
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

task sourcesJar(type: Jar) {
	archiveClassifier = 'sources'
	from sourceSets.main.allSource
}

task javadocJar(type: Jar, dependsOn: javadoc) {
	archiveClassifier = 'javadoc'
	from javadoc.destinationDir
}

javadoc {
	source = sourceSets.main.allJava
	classpath = configurations.compileClasspath

	options
	{
		//setMemberLevel JavadocMemberLevel.PUBLIC
		//setAuthor true
		addStringOption('Xdoclint:-missing', '-quiet')
	}
}

tasks.named("assemble") {
	dependsOn(sourcesJar)
	dependsOn(javadocJar)
}

testing {
	suites {
		test {
			useJUnitJupiter(libs.versions.jupiterVer)
		}
	}
}

test {
	systemProperty 'java.library.path', "${deployableDir}/bin"
	systemProperty 'test.data.path', "${depDataDir}"
}

clean {
	delete "${projectDir}/kb-data"
}

publishing {
	publications {
		SpatialIndex(MavenPublication) {
			from components.java

			artifact sourcesJar {
				archiveClassifier = 'sources'
			}
			artifact javadocJar {
				archiveClassifier = 'javadoc'
			}

			pom {
				name = 'Parliament Client Library'
				description = "A Java library that implements a Parliament index for spatial data.${System.lineSeparator}Copyright © 2023 RTX BBN Technologies Corp."
				url = "https://github.com/${githubOrg}/parliament/tree/main/jena/SpatialIndex"
				organization {
					name = 'RTX BBN Technologies'
					url = 'https://bbn.com/'
				}
				developers {
					developer {
						id = 'iemmons'
						name = 'Ian Emmons'
						email = 'iemmons@rtx.com'
					}
				}
			}
		}
	}

	repositories {
		maven {
			url = "${artifactory_contextUrl}/bbn-maven-us-only"
			credentials {
				username = "${artifactory_user}"
				password = "${artifactory_password}"
			}
		}
	}
}
